--- a/src/app/layout/styles.css
+++ b/src/app/layout/styles.css
@@ -10,6 +10,8 @@ body {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+  /* font-size: 17px; */
+
 }
 @media only screen and (max-width: 600px) {
     br {
